<resources>
    <string name="app_name">PlayAudio</string>
    <string name="choose_folder">选择本地文件夹</string>
    <string name="music">歌曲</string>
    <string name="scanMusic">扫描音乐</string>
    <string name="music_player">Music Player</string>
    <string name="hi">Hi~</string>
    <string name="search_music">搜索音乐</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="todo">TODO</string>
</resources>