<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_menu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/music"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/btn_search_music"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/search_music"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_scan_music"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:background="@drawable/round_corner"
        android:text="@string/scanMusic"
        android:textColor="#FFFFFF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/music_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/music_player_layout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/todo"

            android:src="@drawable/ic_album" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_player"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi"
                android:textColor="#888888"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/music_control"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/music_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_next" />
    </LinearLayout>
</LinearLayout>